Artifacts/source/DevOPS/code/Cloud/Templates/DataBrick/DataBrick-NSG.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "location": {
      "type": "string",
      "defaultValue": "[resourceGroup().location]",
      "metadata": {
        "description": "Location for all resources."
      }
    },
    "environment": {
      "type": "string",
      "defaultValue": "Dev",
      "metadata": {
        "description": "The abbreviated environment label"
      }
    },
    "application": {
      "type": "string",
      "defaultValue": "APP",
      "metadata": {
        "description": "The abbreviated application name"
      }
    },
    "region": {
      "type": "string",
      "defaultValue": "AM",
      "metadata": {
        "description": "The abbreviated Azure Region code"
      }
    }
  },
  "variables": {
    "DatabricksNSGName": "[concat('NSG-', parameters('region'), '-', parameters('location'), '-', parameters('environment'), '-', parameters('application'), '-Databrick')]"
  },
  "resources": [
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2019-04-01",
      "name": "[variables('DatabricksNSGName')]",
      "location": "[parameters('location')]",
      "properties": {
        "provisioningState": "Succeeded",
        "resourceGuid": "c69523b5-4c50-44ea-8515-8059b1db3888",
        "securityRules": [
          {
            "name": "databricks-control-plane-ssh",
            "properties": {
              "description": "Required for Databricks control plane management of worker nodes.",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "23.101.152.95/32",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "databricks-control-plane-worker-proxy",
            "properties": {
              "description": "Required for Databricks control plane communication with worker nodes.",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "5557",
              "sourceAddressPrefix": "23.101.152.95/32",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 110,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "databricks-worker-to-worker",
            "properties": {
              "description": "Required for worker nodes communication within a cluster.",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 200,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "databricks-worker-to-webapp",
            "properties": {
              "description": "Required for workers communication with Databricks Webapp.",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "40.70.58.221/32",
              "access": "Allow",
              "priority": 100,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "databricks-worker-to-sql",
            "properties": {
              "description": "Required for workers communication with Azure SQL services.",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "Sql",
              "access": "Allow",
              "priority": 110,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "databricks-worker-to-storage",
            "properties": {
              "description": "Required for workers communication with Azure Storage services.",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "Storage",
              "access": "Allow",
              "priority": 120,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "databricks-worker-to-worker-outbound",
            "properties": {
              "description": "Required for worker nodes communication within a cluster.",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 130,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "databricks-worker-to-any",
            "properties": {
              "description": "Required for worker nodes communication with any destination.",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 140,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          }
        ],
        "defaultSecurityRules": [
          {
            "name": "AllowVnetInBound",
            "properties": {
              "description": "Allow inbound traffic from all VMs in VNET",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 65000,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "AllowAzureLoadBalancerInBound",
            "properties": {
              "description": "Allow inbound traffic from azure load balancer",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "AzureLoadBalancer",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 65001,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "DenyAllInBound",
            "properties": {
              "description": "Deny all inbound traffic",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 65500,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "AllowVnetOutBound",
            "properties": {
              "description": "Allow outbound traffic from all VMs to all VMs in VNET",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 65000,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "AllowInternetOutBound",
            "properties": {
              "description": "Allow outbound traffic from all VMs to Internet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "Internet",
              "access": "Allow",
              "priority": 65001,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "DenyAllOutBound",
            "properties": {
              "provisioningState": "Succeeded",
              "description": "Deny all outbound traffic",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 65500,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "apiVersion": "2019-04-01",
      "name": "[concat(variables('DatabricksNSGName'), '/databricks-control-plane-ssh')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', variables('DatabricksNSGName'))]"
      ],
      "properties": {
        "description": "Required for Databricks control plane management of worker nodes.",
        "protocol": "*",
        "sourcePortRange": "*",
        "destinationPortRange": "22",
        "sourceAddressPrefix": "23.101.152.95/32",
        "destinationAddressPrefix": "*",
        "access": "Allow",
        "priority": 100,
        "direction": "Inbound",
        "sourcePortRanges": [],
        "destinationPortRanges": [],
        "sourceAddressPrefixes": [],
        "destinationAddressPrefixes": []
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "apiVersion": "2019-04-01",
      "name": "[concat(variables('DatabricksNSGName'), '/databricks-control-plane-worker-proxy')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', variables('DatabricksNSGName'))]"
      ],
      "properties": {
        "description": "Required for Databricks control plane communication with worker nodes.",
        "protocol": "*",
        "sourcePortRange": "*",
        "destinationPortRange": "5557",
        "sourceAddressPrefix": "23.101.152.95/32",
        "destinationAddressPrefix": "*",
        "access": "Allow",
        "priority": 110,
        "direction": "Inbound",
        "sourcePortRanges": [],
        "destinationPortRanges": [],
        "sourceAddressPrefixes": [],
        "destinationAddressPrefixes": []
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "apiVersion": "2019-04-01",
      "name": "[concat(variables('DatabricksNSGName'), '/databricks-worker-to-any')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', variables('DatabricksNSGName'))]"
      ],
      "properties": {
        "description": "Required for worker nodes communication with any destination.",
        "protocol": "*",
        "sourcePortRange": "*",
        "destinationPortRange": "*",
        "sourceAddressPrefix": "*",
        "destinationAddressPrefix": "*",
        "access": "Allow",
        "priority": 140,
        "direction": "Outbound",
        "sourcePortRanges": [],
        "destinationPortRanges": [],
        "sourceAddressPrefixes": [],
        "destinationAddressPrefixes": []
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "apiVersion": "2019-04-01",
      "name": "[concat(variables('DatabricksNSGName'), '/databricks-worker-to-sql')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', variables('DatabricksNSGName'))]"
      ],
      "properties": {
        "description": "Required for workers communication with Azure SQL services.",
        "protocol": "*",
        "sourcePortRange": "*",
        "destinationPortRange": "*",
        "sourceAddressPrefix": "*",
        "destinationAddressPrefix": "Sql",
        "access": "Allow",
        "priority": 110,
        "direction": "Outbound",
        "sourcePortRanges": [],
        "destinationPortRanges": [],
        "sourceAddressPrefixes": [],
        "destinationAddressPrefixes": []
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "apiVersion": "2019-04-01",
      "name": "[concat(variables('DatabricksNSGName'), '/databricks-worker-to-storage')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', variables('DatabricksNSGName'))]"
      ],
      "properties": {
        "description": "Required for workers communication with Azure Storage services.",
        "protocol": "*",
        "sourcePortRange": "*",
        "destinationPortRange": "*",
        "sourceAddressPrefix": "*",
        "destinationAddressPrefix": "Storage",
        "access": "Allow",
        "priority": 120,
        "direction": "Outbound",
        "sourcePortRanges": [],
        "destinationPortRanges": [],
        "sourceAddressPrefixes": [],
        "destinationAddressPrefixes": []
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "apiVersion": "2019-04-01",
      "name": "[concat(variables('DatabricksNSGName'), '/databricks-worker-to-webapp')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', variables('DatabricksNSGName'))]"
      ],
      "properties": {
        "description": "Required for workers communication with Databricks Webapp.",
        "protocol": "*",
        "sourcePortRange": "*",
        "destinationPortRange": "*",
        "sourceAddressPrefix": "*",
        "destinationAddressPrefix": "40.70.58.221/32",
        "access": "Allow",
        "priority": 100,
        "direction": "Outbound",
        "sourcePortRanges": [],
        "destinationPortRanges": [],
        "sourceAddressPrefixes": [],
        "destinationAddressPrefixes": []
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "apiVersion": "2019-04-01",
      "name": "[concat(variables('DatabricksNSGName'), '/databricks-worker-to-worker')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', variables('DatabricksNSGName'))]"
      ],
      "properties": {
        "description": "Required for worker nodes communication within a cluster.",
        "protocol": "*",
        "sourcePortRange": "*",
        "destinationPortRange": "*",
        "sourceAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefix": "*",
        "access": "Allow",
        "priority": 200,
        "direction": "Inbound",
        "sourcePortRanges": [],
        "destinationPortRanges": [],
        "sourceAddressPrefixes": [],
        "destinationAddressPrefixes": []
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "apiVersion": "2019-04-01",
      "name": "[concat(variables('DatabricksNSGName'), '/databricks-worker-to-worker-outbound')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', variables('DatabricksNSGName'))]"
      ],
      "properties": {
        "description": "Required for worker nodes communication within a cluster.",
        "protocol": "*",
        "sourcePortRange": "*",
        "destinationPortRange": "*",
        "sourceAddressPrefix": "*",
        "destinationAddressPrefix": "VirtualNetwork",
        "access": "Allow",
        "priority": 130,
        "direction": "Outbound",
        "sourcePortRanges": [],
        "destinationPortRanges": [],
        "sourceAddressPrefixes": [],
        "destinationAddressPrefixes": []
      }
    }
  ]
}
